k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: worldpay
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worldpay-backend
  template:
    metadata:
      labels:
        app: worldpay-backend
    spec:
      containers:
        - name: cont-backend
          image: <AWS_ACCOUNT>.dkr.ecr.<AWS_REGION>.amazonaws.com/backend:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
